--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,12 +8,12 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">9,081</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">10,293</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">com.test.Testing</td><td><a href="#m0">Creating</a></td><td rowspan="1">1709340284849</td><td rowspan="1">3751</td></tr><tr class="passedeven"><td><a href="#m1">Getting</a></td><td rowspan="1">1709340288625</td><td rowspan="1">1894</td></tr><tr class="passedeven"><td><a href="#m2">delete</a></td><td rowspan="1">1709340291708</td><td rowspan="1">1596</td></tr><tr class="passedeven"><td><a href="#m3">update</a></td><td rowspan="1">1709340290521</td><td rowspan="1">1186</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">com.test.Testing</td><td><a href="#m0">Creating</a></td><td rowspan="1">1718882513979</td><td rowspan="1">4156</td></tr><tr class="passedeven"><td><a href="#m1">Getting</a></td><td rowspan="1">1718882518161</td><td rowspan="1">1563</td></tr><tr class="passedeven"><td><a href="#m2">delete</a></td><td rowspan="1">1718882521361</td><td rowspan="1">1616</td></tr><tr class="passedeven"><td><a href="#m3">update</a></td><td rowspan="1">1718882519734</td><td rowspan="1">1606</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.test.Testing#Creating</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">com.test.Testing#Creating</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">com.test.Testing#Getting</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m2">com.test.Testing#delete</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m3">com.test.Testing#update</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
